--- a/plugins/StereoAudioGain/source/StereoAudioGain.ui
+++ b/plugins/StereoAudioGain/source/StereoAudioGain.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>StereoAudioGainUi</class>
- <widget class="QDialog" name="StereoAudioGainUi">
+ <widget class="QWidget" name="StereoAudioGainUi">
   <property name="geometry">
    <rect>
     <x>0</x>
